why am i still doing this